feat(kernel): add framebuffer support and update kernel main function with welcome message chore(build): modify CI workflow to navigate to LplKernel directory before building fix(gitignore): add .Test/ to ignore list new(framebuffer): implement framebuffer initialization and pixel setting functions new(vbe): add VBE header and mode information structures new(graphics): introduce graphics module with basic drawing definitions new(tty): update tty header for kernel terminal interface

--- a/.github/workflows/build_lplkernel.yml
+++ b/.github/workflows/build_lplkernel.yml
@@ -47,7 +47,11 @@ jobs:
         exit $(($? != 0))
 
     - name: Build
-      run: ./iso.h
+      run: |
+        pwd
+        ls
+        cd LplKernel
+        ./iso.h
 
     - name: Check if build succeeded
       run: exit $(($? != 0))
