feat(makefile): add stack protector flags to CFLAGS and LDFLAGS

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -27,6 +27,9 @@ CPPFLAGS:=$(CPPFLAGS) $(KERNEL_ARCH_CPPFLAGS)
 LDFLAGS:=$(LDFLAGS) $(KERNEL_ARCH_LDFLAGS)
 LIBS:=$(LIBS) $(KERNEL_ARCH_LIBS)
 
+CFLAGS += -fstack-protector-strong
+LDFLAGS += -fstack-protector-strong
+
 KERNEL_OBJS=\
 $(KERNEL_ARCH_OBJS) \
 kernel/kernel.o \
