--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -27,8 +27,8 @@ CPPFLAGS:=$(CPPFLAGS) $(KERNEL_ARCH_CPPFLAGS)
 LDFLAGS:=$(LDFLAGS) $(KERNEL_ARCH_LDFLAGS)
 LIBS:=$(LIBS) $(KERNEL_ARCH_LIBS)
 
-CFLAGS += -fstack-protector-strong
-LDFLAGS += -fstack-protector-strong
+# CFLAGS += -fstack-protector-strong
+# LDFLAGS += -fstack-protector-strong
 
 KERNEL_OBJS=\
 $(KERNEL_ARCH_OBJS) \
