--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -3,8 +3,19 @@ KERNEL_ARCH_CPPFLAGS=
 KERNEL_ARCH_LDFLAGS=
 KERNEL_ARCH_LIBS=
 
+# Multiboot version selection (1 or 2)
+MULTIBOOT_VERSION?=1
+
+ifeq ($(MULTIBOOT_VERSION),2)
+BOOT_OBJECT=$(ARCHDIR)/boot2.o
+KERNEL_ARCH_CPPFLAGS+=-DMULTIBOOT_VERSION=2
+else
+BOOT_OBJECT=$(ARCHDIR)/boot.o
+KERNEL_ARCH_CPPFLAGS+=-DMULTIBOOT_VERSION=1
+endif
+
 KERNEL_ARCH_OBJS=\
-$(ARCHDIR)/boot.o \
+$(BOOT_OBJECT) \
 $(ARCHDIR)/tty.o \
 $(ARCHDIR)/asmutils.o\
 $(ARCHDIR)/serial.o\
