refactor: ensure proper files organization

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -7,16 +7,16 @@ KERNEL_ARCH_LIBS=
 MULTIBOOT_VERSION?=1
 
 ifeq ($(MULTIBOOT_VERSION),2)
-BOOT_OBJECT=$(ARCHDIR)/boot2.o
+BOOT_OBJECT=$(ARCHDIR)/boot/boot2.o
 KERNEL_ARCH_CPPFLAGS+=-DMULTIBOOT_VERSION=2
 else
-BOOT_OBJECT=$(ARCHDIR)/boot.o
+BOOT_OBJECT=$(ARCHDIR)/boot/boot.o
 KERNEL_ARCH_CPPFLAGS+=-DMULTIBOOT_VERSION=1
 endif
 
 KERNEL_ARCH_OBJS=\
 $(BOOT_OBJECT) \
-$(ARCHDIR)/tty.o \
-$(ARCHDIR)/asmutils.o\
-$(ARCHDIR)/serial.o\
-$(ARCHDIR)/multiboot_info_helper.o\
+$(ARCHDIR)/boot/multiboot_info_helper.o \
+$(ARCHDIR)/drivers/tty.o \
+$(ARCHDIR)/drivers/serial.o \
+$(ARCHDIR)/lib/asmutils.o \
