feat(cpu): implement Global Descriptor Table and associated functions

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -17,6 +17,8 @@ endif
 KERNEL_ARCH_OBJS=\
 $(BOOT_OBJECT) \
 $(ARCHDIR)/boot/multiboot_info_helper.o \
+$(ARCHDIR)/cpu/gdt.o \
+$(ARCHDIR)/cpu/gdt_load.o \
 $(ARCHDIR)/drivers/tty.o \
 $(ARCHDIR)/drivers/serial.o \
 $(ARCHDIR)/lib/asmutils.o \
