feat(gdt): implement GDT helper functions for printing and writing entries

--- a/kernel/arch/i386/make.config
+++ b/kernel/arch/i386/make.config
@@ -19,6 +19,7 @@ $(BOOT_OBJECT) \
 $(ARCHDIR)/boot/multiboot_info_helper.o \
 $(ARCHDIR)/cpu/gdt.o \
 $(ARCHDIR)/cpu/gdt_load.o \
+$(ARCHDIR)/cpu/gdt_helper.o \
 $(ARCHDIR)/drivers/tty.o \
 $(ARCHDIR)/drivers/serial.o \
 $(ARCHDIR)/lib/asmutils.o \
