ci(linter): add paths for linting .c and .h files

--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -3,6 +3,9 @@ name: Linter GitHub Action
 on:
   push:
     branches-ignore: [ga-ignore-**, gh-pages]
+    paths:
+      - '**.c'
+      - '**.h'
 
 permissions:
   contents: write
