--- a/.github/workflows/linter.yml
+++ b/.github/workflows/linter.yml
@@ -11,9 +11,13 @@ on:
 permissions:
   contents: write
 
+concurrency:
+  group: linter-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   lint_code:
-    name: Lint with clang-format
+    name: Lint with clang-format (auto-apply)
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v5
@@ -21,48 +25,43 @@ jobs:
           fetch-depth: 0
           persist-credentials: true
 
-      - name: Restore clang-format .deb cache
-        id: cache-clang
-        uses: actions/cache@v4.3.0
-        with:
-          path: .apt-cache
-          key: ${{ runner.os }}-apt-cache-clang-format-v1
-          restore-keys: |
-            ${{ runner.os }}-apt-cache-clang-format-
-
-      - name: Prepare and download clang-format packages to workspace cache
-        if: steps.cache-clang.outputs.cache-hit != 'true'
+      - name: Install dependencies
         run: |
           sudo apt-get update
-          mkdir -p .apt-cache
-          sudo apt-get -o Dir::Cache::archives="$(pwd)/.apt-cache" install --download-only -y clang-format || true
-          sudo chown -R "$(id -u):$(id -g)" .apt-cache || true
+          sudo apt-get install -y clang-format
 
-      - name: Install clang-format from local cache
+      - name: Find tracked C files
+        id: files
         run: |
-          if ls .apt-cache/*.deb 1> /dev/null 2>&1; then
-            sudo dpkg -i .apt-cache/*.deb || sudo apt-get install -f -y
-          else
-            sudo apt-get install -y clang-format
-          fi
+          git ls-files '*.c' '*.h' > tracked_files.txt || true
+          echo "files<<EOF" >> $GITHUB_OUTPUT
+          sed 's/\"/\\\"/g' tracked_files.txt | sed -z 's/\n/\\n/g' >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
 
-      - name: Run clang-format on C source/header files and ensure newline at EOF
+      - name: Ensure newline at EOF and run clang-format
+        if: steps.files.outputs.files != ''
         run: |
-          git ls-files -z "*.c" "*.h" | while IFS= read -rd '' f; do tail -c1 < "$f" | read -r _ || echo >> "$f"; done
-          find . -iname '*.h' -o -iname '*.c' | xargs clang-format -i
+          git ls-files '*.c' '*.h' | while IFS= read -r f; do
+            tail -c1 < "$f" | read -r _ || echo >> "$f"
+            clang-format -i "$f"
+          done
 
-      - name: Set up Git and Push changes
+      - name: Show git status
+        run: |
+          git status --porcelain
+
+      - name: Commit and push style changes
+        if: ${{ steps.files.outputs.files != '' }}
         env:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add .
-          git commit -m "style: apply linter" || true
-          git fetch origin main
-          git pull --rebase origin main || true
-          if ! git push origin HEAD:main; then
-            echo 'Push failed - showing remote status for debugging:'
-            git --no-pager log --oneline --graph --decorate --all | sed -n '1,50p'
+          git config user.name "github-actions[bot]"
+          git config user.email "github-actions[bot]@users.noreply.github.com"
+          git add -A
+          if git diff --cached --quiet; then
+            echo "No formatting changes to commit."
             exit 0
           fi
+          git commit -m "style: apply clang-format" || true
+          git pull --rebase origin main || true
+          git push origin HEAD:main
